aws/ingress-aws-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":
      { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:XXXXXXXXX:certificate/XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    alb.ingress.kubernetes.io/group.order: "1000"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-name: eks-alb-name
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: 200-404
    alb.ingress.kubernetes.io/tags: Environment=sandbox
    alb.ingress.kubernetes.io/target-type: ip
  name: eks-alb-name
  namespace: kube-system
spec:
  ingressClassName: alb
  rules:
  - host: '*.dominio.com'
    http:
      paths:
      - backend:
          service:
            name: aws-load-balancer-webhook-service
            port:
              number: 443
        path: /*
        pathType: ImplementationSpecific
